2013-06-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r16551.

	* src/gsad_omp.c (get_task): Get delta report from delta_report_id
	instead of report_id, becase delta_id might be passed by other actions
	like Delete.

	* src/html/omp.xsl (report): Send delta report in delta_report_id.

2013-05-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r16307.

	* src/html/omp.xsl (task [details], html-edit-task-form): Correct help
	links.

	* src/html/help.xsl (task_details.html): Remove tasksummary anchor.  Add
	Import Report section.
	(config_details.html, config_editor.html): Correct text about task
	details link.

2013-04-18  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r16092.

	* src/html/omp.xsl (html-edit-task-form): Select existing target and
	config in dropdowns.

2013-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump to 4.0.1.

	* CMakeLists.txt: Updated version number.

	* src/html/help.xsl: Updated version number.

2013-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 4.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Set version to 4.0.0. Switch version scheme.

	* INSTALL: Document increased GnuTLS dependency.

	* src/html/help.xsl: Updated version number.

2013-04-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r16027. Patch by Matthew Mundell.

	Allow editing of task config and target when the task is New.

	* src/gsad_omp.c (edit_task): Set filter when getting targets and
	configs, otherwise the defaults may cause too few rows.
	(save_task_omp): Add config and target to OMP request.

	* src/html/omp.xsl (html-edit-task-form): Enable config and target
	editing when the task is New.

2013-04-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r16023. Patch by Matthew Mundell.

	* src/html/omp.xsl (filter-window-part): Set the value of the -- option
	in the filter dropdown to "--".  The is to differentiate it from the link